<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Workout Organizer</string>
    <string name="action_settings">Settings</string>
    <string name="settings_add_workout">New Workout...</string>
    <string name="add_exercize_title">New exercize</string>
    <string name="reps_count">Count of reps</string>
    <string name="rest_duration">Rest after, in seconds</string>
    <string name="rep_duration">Duration of one rep, in seconds</string>
    <string name="add_button_label">Add</string>
    <string name="add_workout_label">Workout editor</string>
    <string name="add_title">Editor</string>
    <string name="empty">Still don\'t start?</string>
    <string name="add_exercize_button">add exercize</string>
    <string name="save_workout_button">Save Workout</string>
    <string name="hint_edit">Tap exercize to change it</string>
    <string name="exercize_title">New exercize</string>
    <string name="new_workout_name">Enter Workout name</string>
    <string name="new_workout_description">Enter short description</string>
    <string name="new_workout_add">Start edit</string>
    <string name="newWorkout_title">new Workout</string>
    <string name="context_delete_workout">Delete</string>
    <string name="exercise_type">Choose exercise</string>
    <string name="context_rename_workout">Rename</string>
    <string name="button_text_change">Change</string>
    <string name="new_exercise_name">Enter new exercise type</string>
    <string name="new_exercise_add">Add</string>
    <string name="settings_add_exercise_type">Exercises editor...</string>
    <string name="newExercise_title">Exercise editor</string>
    <string name="context_delete_exercise_type">Delete </string>
    <string name="context_rename_exercise_type">Rename </string>
    <string name="change_exercise_type_button">Change</string>
     <string name="add_exercise_type_button">Add</string>
</resources>