<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:alpha="1"
    android:orientation="horizontal"
    android:padding="10dip" >

    <LinearLayout
	    
		android:orientation="vertical" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:layout_gravity="center" 
		android:layout_marginLeft="25dip">
    
 	   <TextView 
  	      	android:layout_height="wrap_content" 
			android:layout_width="wrap_content" 
			android:layout_gravity="top|center" 
			android:layout_marginBottom="25dip" 
			android:textSize="24.5sp" 
			android:text="@string/add_workout_label"
    	    />

		<Button
			android:id="@+id/addExercize" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:text="@string/add_exercize_button"
			  />
		<Button
			android:id="@+id/saveWorkout" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:text="@string/save_workout_button"
			  />
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/hint_edit"
		    android:layout_marginTop="10dip" 
		    android:layout_marginBottom="10dip"
		    android:textColor="@color/hint_edit"
			android:textSize="12.5sp" />
		<ListView
			android:id="@android:id/list" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" />
 	   <TextView 
 	       android:id="@android:id/empty" 
 	       android:layout_width="wrap_content" 
 	       android:layout_height="wrap_content" 
 	       android:text="@string/empty" />
 	   </LinearLayout>

</LinearLayout>