<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="10dip" 
    android:background="@drawable/background"
    >

	<LinearLayout
	    
		android:orientation="vertical" 
		android:layout_height="wrap_content" 
		android:layout_width="fill_parent" 
		android:layout_gravity="center"
		android:layout_marginLeft="25dip" > 
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/exercise_type"
		    android:layout_marginTop="25dip" 
		    style="@style/lable_text"
			android:textSize="18.5sp"  />
		<Spinner
			android:id="@+id/exercize_drop_list" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			style="@style/editable_text"
			android:layout_marginTop="25dip"  />
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/reps_count"
		    style="@style/lable_text"
		    android:layout_marginTop="25dip"
			android:textSize="18.5sp"  />
		<EditText
			android:id="@+id/repsCountEdit" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			style="@style/editable_text"
			android:inputType="number" />
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/rep_duration"
		    style="@style/lable_text"
		    android:layout_marginTop="25dip" 
			android:textSize="18.5sp" />
		<EditText
			android:id="@+id/repsDurationEdit" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			style="@style/editable_text"
			android:inputType="number"  />
		<TextView
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/rest_duration"
		    style="@style/lable_text"
		    android:layout_marginTop="25dip"
			android:textSize="18.5sp" />
		<EditText
			android:id="@+id/restDurationEdit" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			style="@style/editable_text"
			android:inputType="number"  />

		<Button
		    android:id="@+id/save_exercise_button"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="18.5dip"
		    android:shadowColor="@color/shadow_color"
		    android:background="@drawable/custom_button"
            style="@style/button_text"
		    android:text="@string/add_button_label" />

   </LinearLayout>
</LinearLayout>